# Production-ETL-Platform-With-Airflow

./: .gitignore  docker-compose.yaml  docker-compose.yml  notes.md  pyproject.toml  requirements.txt
db/: session.py
db/models/: source_models.py  warehouse_models.py
docs/: architecture.drawio
mock_api/: Dockerfile  auth.py  data.py  main.py  models.py
