[project]
name = "production-etl-platform-with-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-postgres>=6.6.1",
    "great-expectations>=1.15.1",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
